--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,25 +1,83 @@
+<!-- Template: http://getbootstrap.com/examples/cover/ -->
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
     <title>Photo Search and Upload</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
+
+    <!-- Bootstrap core CSS -->
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="./assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="./assets/css/cover.css" rel="stylesheet">
+    <link href="./assets/css/main.css" rel="stylesheet">
+    <link href="./assets/css/chat.css" rel="stylesheet">
+
+    <!-- api gateway generated sdk -->
+    <script src="./assets/js/sdk/lib/axios/dist/axios.standalone.js"></script>
+    <script src="./assets/js/sdk/lib/CryptoJS/rollups/hmac-sha256.js"></script>
+    <script src="./assets/js/sdk/lib/CryptoJS/rollups/sha256.js"></script>
+    <script src="./assets/js/sdk/lib/CryptoJS/components/hmac.js"></script>
+    <script src="./assets/js/sdk/lib/CryptoJS/components/enc-base64.js"></script>
+    <script src="./assets/js/sdk/lib/url-template/url-template.js"></script>
+    <script src="./assets/js/sdk/lib/apiGatewayCore/sigV4Client.js"></script>
+    <script src="./assets/js/sdk/lib/apiGatewayCore/apiGatewayClient.js"></script>
+    <script src="./assets/js/sdk/lib/apiGatewayCore/simpleHttpClient.js"></script>
+    <script src="./assets/js/sdk/lib/apiGatewayCore/utils.js"></script>
+
+    <script src="./assets/js/sdk/apigClient.js"></script>
+
+    <script src="./assets/js/aws-sdk.min.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
     <div id="search-section">
-        <input type="text" id="search-query" placeholder="Enter search query">
-        <button onclick="searchPhotos()">Search</button>
-    </div>
+      <input type="text" id="search-query" placeholder="Enter search query">
+      <button onclick="searchPhotos()">Search</button>
+  </div>
 
-    <div id="results-section">
-        <!-- Search results will be displayed here -->
-    </div>
+  <div id="results-section">
+      <!-- Search results will be displayed here -->
+  </div>
 
-    <div id="upload-section">
-        <input type="file" id="photo-upload" accept="image/*">
-        <input type="text" id="custom-labels" placeholder="Enter custom labels (comma-separated)">
-        <button onclick="uploadPhoto()">Upload</button>
-    </div>
+  <div id="upload-section">
+      <input type="file" id="photo-upload" accept="image/*">
+      <input type="text" id="custom-labels" placeholder="Enter custom labels (comma-separated)">
+      <button onclick="uploadPhoto()">Upload</button>
+  </div>
 
-    <script src="index.js"></script>
-</body>
+  <script src="index.js">
+      
+  </script>
+  <script>var sdk = apigClientFactory.newClient({});</script>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script>window.jQuery || document.write('<script src="./assets/js/vendor/jquery.min.js"><\/script>')</script> -->
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="./assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!-- custom scroll bar -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js'></script>
+    <!-- chat js -->
+    <script src="./assets/js/chat.js"></script>
+  </body>
 </html>
